--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:20.0.0' //dokumentacja
     implementation 'com.squareup.retofit2:retofit:2.9.0' //dokumentacja
     implementation 'com.squareup.retofit2:converter-gson:2.9.0' //dokumentacja
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
